# kernel-bindings-tests

./: .goreleaser.yml  Makefile  README.md  go.mod
.github/workflows/: test.yml
cmd/mock-handler/: main.go
cmd/runner/: main.go
docs/: handler-spec.md
runner/: handler.go  handler_test.go  runner.go  types.go
rust-handler/: Cargo.toml
rust-handler/src/: chainstate.rs  handler.rs  main.rs  protocol.rs  script_pubkey.rs  state.rs
testdata/: script_verify_errors.json  script_verify_success.json
