[package]
name = "rust-handler"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

[dependencies]
bitcoinkernel = { git = "https://github.com/TheCharlatan/rust-bitcoinkernel.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tempfile = "3.8"
